--- a/clinic.html
+++ b/clinic.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css">
  
 </head>
-<body>
+<body style="font-weight: bold;">
   <div class="container">
     <h1 id="clinic-title">لوحة العيادة</h1>
     <div id="clinic-patients"></div>
-    <button id="logout-btn">تسجيل خروج</button>
-    <a href="index.html" class="action-link">العودة للاستقبال</a>
+    <button id="logout-btn" style="padding: 10px; border-radius: 15px; padding: 7px;">تسجيل خروج</button>
+    <a href="index.html" class="action-link" style="padding: 10px; border-radius: 15px; padding: 7px;">العودة للاستقبال</a>
   </div>
       <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
