--- a/display.html
+++ b/display.html
@@ -6,11 +6,12 @@
   <title>صفحة العرض</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="font-weight: bold;">
   <div class="container">
     <h1>قائمة المرضى حسب العيادة</h1>
     <div id="clinics-tables" class="clinics-tables"></div>
-    <a href="index.html" class="action-link">العودة للاستقبال</a>
+    <a href="index.html" class="action-link" style="    border-radius: 15px;
+    padding: 7px;">العودة للاستقبال</a>
   </div>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
