--- a/clinic-login.html
+++ b/clinic-login.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body style="font-weight: bold;">
   <div class="container">
     <h1>تسجيل دخول العيادة</h1>
     <form id="clinic-login-form">
@@ -18,7 +18,8 @@
       <button type="submit">دخول</button>
     </form>
     <div id="login-error" class="error-message"></div>
-    <a href="index.html" class="action-link">العودة للاستقبال</a>
+    <a href="index.html" class="action-link" style="    border-radius: 15px;
+    padding: 7px;">العودة للاستقبال</a>
   </div>
       <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
