--- a/display.html
+++ b/display.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>صفحة العرض</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="image.png" />
+
 </head>
 <body style="font-weight: bold;">
+
   <div class="container">
     <h1>قائمة المرضى حسب العيادة</h1>
     <div id="clinics-tables" class="clinics-tables"></div>
@@ -17,5 +21,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
   <script src="firebase-config.js"></script>
   <script src="main.js"></script>
+  
 </body>
 </html>
