--- a/clinic-login.html
+++ b/clinic-login.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>دخول العيادة</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="image.png" />
 
 </head>
 <body style="font-weight: bold;">
+
   <div class="container">
     <h1>تسجيل دخول العيادة</h1>
     <form id="clinic-login-form">
@@ -26,5 +29,6 @@
   <script src="firebase-config.js"></script>
   
   <script src="main.js"></script>
+  
 </body>
 </html> 
