--- a/clinic.html
+++ b/clinic.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>لوحة العيادة</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="image.png" />
  
 </head>
+
 <body style="font-weight: bold;">
   <div class="container">
     <h1 id="clinic-title">لوحة العيادة</h1>
@@ -19,5 +22,6 @@
   <script src="firebase-config.js"></script>
   
   <script src="main.js"></script>
+  
 </body>
 </html> 
