--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>صفحة الاستقبال</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="image.png"/>
 
 </head>
 <body style="font-weight: bold;">
+
   <div class="container">
     <h1>الاستقبال - تسجيل المرضى</h1>
     <div id="clinics-list" class="clinics-list"></div>
@@ -32,5 +35,6 @@
   <script src="firebase-config.js"></script>
   
   <script src="main.js"></script>
+  
 </body>
 </html> 
